chore(jquery.min.js): Load jQuery locally

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="javascripts/jquery.min.js"></script>
     <script async src='javascripts/smoothscroll.js'></script>
     <script async src='javascripts/tabs.js'></script>
     <script async src='javascripts/tab-loader.js'></script>
