--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,7 +152,7 @@
         </div>
     <% } %>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="javascripts/jquery.min.js"></script>
     <script async src='javascripts/app.js'></script>
     <script async src='javascripts/classie.js'></script>
     <script async src='javascripts/smoothscroll.js'></script>
