--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@ body {
 
 .hero {
   background: #11998e;  /* fallback for old browsers */
+  position: relative;
 }
 
 .hero:before {
@@ -17,7 +18,7 @@ body {
   bottom: 0;
   content: '';
   display: block;
-  height: 168px;
+  height: 20%;
   left: 0;
   position: absolute;
   background-repeat: no-repeat;
