feat(index.js): Increased entropy of generated word

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ body {
   bottom: 0;
   content: '';
   display: block;
-  height: 20%;
+  height: 168px;
   left: 0;
   position: absolute;
   background-repeat: no-repeat;
